# taichi-debug

./: .gitignore  CMakeLists.txt  taichi_build_test.cc  taichi_kernel.cc  taichi_kernel.h
include/taichi/c_api/runtime/: runtime_cuda.bc  runtime_x64.bc
include/taichi/c_api/src/: c_api_test_utils.cpp  c_api_test_utils.h  taichi_llvm_impl.h
include/taichi/common/: commit_hash.h  logging.h  serialization.h  version.h
include/taichi/cpp/: taichi.hpp
include/taichi/rhi/: public_device.h
include/taichi/rhi/cpu/: cpu_device.cpp
include/taichi/util/: lang_util.h
temp_aot/: __content__  metadata.tcb
temp_aot_cpu/: metadata.json  taichi_kernel_cpu.ll
temp_aot_cuda/: __content__  metadata.json  metadata.tcb  taichi_kernel_cpu.ll  taichi_kernel_cuda.ll
